--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@grapecity/spread-excelio": "^16.0.7",
+    "@grapecity/spread-sheets": "^14.2.0",
+    "@grapecity/spread-sheets-react": "^14.2.0",
+    "@grapecity/wijmo": "^5.20222.877",
+    "@grapecity/wijmo.react.chart": "^5.20222.877",
+    "@grapecity/wijmo.react.chart.animation": "^5.20222.877",
+    "@grapecity/wijmo.react.grid": "^5.20222.877",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@tanstack/react-query": "^4.28.0",
@@ -19,6 +26,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.10.0",
     "lodash": "^4.17.21",
     "re-resizable": "^6.9.9",
@@ -35,6 +43,7 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
