--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "start": "vite preview"
+    "start": "vite preview",
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -22,7 +23,6 @@
     "@mui/material": "^5.11.16",
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.28.0",
-    "@types/node": "^16.18.22",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
@@ -39,16 +39,25 @@
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-interactions": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/blocks": "^7.0.2",
+    "@storybook/react": "^7.0.2",
+    "@storybook/react-vite": "^7.0.2",
     "@types/file-saver": "^2.0.5",
     "@types/lodash": "^4.14.192",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "storybook": "^7.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
