--- a/package.json
+++ b/package.json
@@ -46,12 +46,18 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-interactions": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
     "@storybook/blocks": "^7.0.2",
     "@storybook/react": "^7.0.2",
     "@storybook/react-vite": "^7.0.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.192",
@@ -60,9 +66,16 @@
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "react-docgen-typescript": "^2.2.2",
     "storybook": "^7.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest-setup.ts"
+    ]
   }
 }
