--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@tanstack/react-query-devtools": "^4.28.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
-    "framer-motion": "^10.10.0",
+    "framer-motion": "^10.12.4",
     "jest": "^27.5.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "re-resizable": "^6.9.9",
     "react": "^18.2.0",
@@ -58,8 +60,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
