--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.12.4",
+    "i18next": "^22.4.15",
     "jest": "^27.5.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -37,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-i18next": "^12.2.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
