--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "devDebug": "vite -d",
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite preview",
